# Dictionary

./: CMakeLists.txt  Main.qml  git-it.sh  main.cpp  readme.md  wordelementslistmodel.cpp  wordelementslistmodel.h  wordslistmodel.cpp  wordslistmodel.h
android/: AndroidManifest.xml
